--- a/app/index.html
+++ b/app/index.html
@@ -140,7 +140,7 @@
             <div class="testimonial__photo">
               <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
             </div>
-            <h3 class="testimonial__title">Jane Doe</h3>
+            <h3 class="testimonial__title">Charly Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
           </div>
@@ -151,7 +151,7 @@
             <div class="testimonial__photo">
               <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
             </div>
-            <h3 class="testimonial__title">John Smith</h3>
+            <h3 class="testimonial__title">Khumalo Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
           </div>
@@ -173,7 +173,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
+      <p><span class="site-footer__text">Charly Web.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
     </div>
   </footer>
 
